--- a/ZONE-watcher/app/assets/stylesheets/search-dino.css.scss
+++ b/ZONE-watcher/app/assets/stylesheets/search-dino.css.scss
@@ -1,6 +1,15 @@
 #reador-title{
   padding-top:0px !important;
   padding-bottom:0px !important;
+
+
+  font-size: 31.5px;
+  line-height: 40px;
+  font-family: inherit;
+  font-weight: bold;
+  text-rendering: optimizelegibility;
+
+
 }
 .home-input-search{
   border-color:white !important;
@@ -29,3 +38,4 @@
   border-width: 0px 5px 5px 5px;
   border-style: solid;
 }
+
