--- a/ZONE-watcher/app/views/layouts/_maillinglist.html.erb
+++ b/ZONE-watcher/app/views/layouts/_maillinglist.html.erb
@@ -5,29 +5,10 @@
 
 
 
-<!-- Begin MailChimp Signup Form -->
-<link href="http://cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-    #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-        /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    .modal-body{
-        padding: 0px;
-    }
-    .mc-field-group{
-        padding-left:10px;
-    }
-    #mc_embed_signup form {
-        margin: 0px;
-        padding: 0px;
-    }
-</style>
-
-
-<div id="mc_embed_signup" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div id="mc_embed_signup" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="modalSubscribeLabel" aria-hidden="true">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-    <h3 id="myModalLabel">Subscribe to our mailing list</h3>
+    <h3 id="modalSubscribeLabel">Subscribe to our mailing list</h3>
   </div>
   <div class="modal-body">
           <form action="http://reador.us4.list-manage.com/subscribe/post?u=31eadadd9a731b29859ac9e36&amp;id=c7737f1283" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
