--- a/ZONE-watcher/app/views/errors/noBD.html
+++ b/ZONE-watcher/app/views/errors/noBD.html
@@ -88,9 +88,9 @@
 
         <div class="search clear-top">
 
-            <div class="row" xmlns="http://www.w3.org/1999/html">
+            <div class="row">
                 <div class="span2"></div>
-                <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead"/></div>
+                <div id="dino-logo" class="span3"><img src="/assets/dino.png" class="dead" alt="dino-logo" /></div>
                 <div class="span5 ">
                     <h1 class="triangle-border left"  id="reador-title">
                         <i class="underline error-text">glooooops</i>
