--- a/ZONE-watcher/app/views/home/_search_dino.html.erb
+++ b/ZONE-watcher/app/views/home/_search_dino.html.erb
@@ -1,11 +1,11 @@
-<div class="row" xmlns="http://www.w3.org/1999/html">
+<div class="row">
   <div class="<%= (params[:controller] == "home") ? "span2" : "span1" %>"></div>
-  <div id="dino-logo" class="span3"><img src="/assets/dino.png"/>
+  <div id="dino-logo" class="span3"><img alt="dino-logo" src="/assets/dino.png"/>
   </div>
   <div class="<%= (params[:controller] == "home") ? "span5" : "span7" %>">
     <%= form_for "formModal", :url => "/searches", method: :POST, html: { class: "formModal"} do |f| %>
         <div id="movedData"></div>
-        <h2 class="triangle-border left basicMouse"  id="reador-title">
+        <div class="triangle-border left basicMouse"  id="reador-title">
           <div class="row-fluid">
             <input
             class="home-input-search span11"
@@ -16,25 +16,21 @@
             onkeyup="return false;"
             >
           <span id="go-button" class="span1 pull-right hidden" >
-            <button class="btn-success" type="submit" class="btn-success" onclick="movingDataFromIndex()"><span class="icon-arrow-right"></span></button>
+            <button class="btn-success" type="submit" onclick="movingDataFromIndex()"><span class="icon-arrow-right"></span></button>
           </span>
           </div>
-        </h2>
+        </div>
     <%end%>
 
     <div class="row-fluid">
       <div class="span7 btn-marged">
-        <%= link_to new_search_path do %>
-            <button type="button" class="btn btn-info span12">
-              <h4><%= raw t 'search.gobutton' %></h4>
-            </button>
+        <%= link_to new_search_path,:class => "btn btn-info span12" do %>
+          <h4><%= raw t 'search.gobutton' %></h4>
         <%end%>
       </div>
       <div class="span5 btn-marged">
-        <%= link_to Search.find(Rails.application.config.defaultRequestId) do %>
-          <button type="button" class="btn btn-warning span12">
-            <h5><%= raw t 'search.exampleButton' %></h5>
-          </button>
+        <%= link_to Search.find(Rails.application.config.defaultRequestId) ,:class=>"btn btn-warning span12" do %>
+          <h5><%= raw t 'search.exampleButton' %></h5>
         <%end%>
       </div>
     </div>
