--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <div class="container-fluid">
     <div  id="page-content">
       <%= render 'layouts/messages' %>
       <%= yield %>
