better home page

--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
           <ul class="nav">
             <li><%= link_to "Reador.NET", root_path, :class=>"navbar-brand" %></li>
             <li class="<%= 'active' if current_page?(searches_path) %>"><%= link_to t("menu.yourSearches"), searches_path %></li>
-            <li class="<%= 'active' if current_page?(items_path) %>"><%= link_to t("menu.news"), items_path %></li>
+            <li class="<%= 'active' if current_page?('/items') %>"><%= link_to t("menu.news"), items_path %></li>
             <li class="<%= 'active' if current_page?(sources_path) %>"><%= link_to t("menu.yourSources"), sources_path %></li>
             <li class="<%= 'active' if current_page?(twitter_path) %>"><%= link_to t("menu.twitter"), twitter_path %></li>
           </ul>
@@ -59,7 +59,8 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  <% if current_page?('/items') then mainClass="container-fluid" else mainClass="container" end%>
+  <div class="<%= mainClass %>">
     <div  id="page-content">
       <%= render 'layouts/messages' %>
       <%= yield %>
