--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -16,11 +16,11 @@
 </div>
 
 
-<div class="splash splash-off">
+<div class="splash splash-on">
   <div class="container">
     <div class="text-center more-infos"><h1><a href="#moreAbout" id="moreAbout"><%= raw t 'moreabout.title' %></a></h1></div>
 
-    <div class="infos infos-off">
+    <div class="infos infos-on">
       <section id="why" class="clearfix">
         <div class="row">
           <div class="span4">
@@ -65,15 +65,26 @@
           </div>
         </div>
       </section>
+      <section id="who" class="clearfix">
+        <div class="row">
+          <div class="span4"></div>
+          <div class="span4">
+            <h4><i class="icon-user"></i><%= raw t 'moreabout.whosunder.title' %></h4>
+          </div>
+          <div class="span4"></div>
+        </div>
+      </section>
     <section id="who" class="clearfix">
       <div class="row">
-        <div class="span3"></div>
-        <div class="span6">
-          <h4><i class="icon-user"></i><%= raw t 'moreabout.whosunder.title' %></h4>
-          <%= raw t 'moreabout.whosunder.content' %>
-          <iframe width="560" height="315" src="http://www.youtube.com/embed/yFkCumtCEeg" allowfullscreen></iframe>
+        <div class="span4 dino-logo">
+          <img src="/assets/dino-contacts.png" alt="dino-logo">
         </div>
-          <div class="span3"></div>
+        <div class="span8">
+          <%= raw t 'moreabout.whosunder.content' %>
+          <iframe width="620" height="349" src="http://www.youtube.com/embed/yFkCumtCEeg" allowfullscreen></iframe>
+        </div>
+          <div class="span1"></div>
       </div>
     </section>
    </div>
+
