--- a/ZONE-watcher/app/views/home/index.html.erb
+++ b/ZONE-watcher/app/views/home/index.html.erb
@@ -80,7 +80,7 @@
           <img src="/assets/dino-contacts.png" alt="dino-logo">
         </div>
         <div class="span8">
-          <%= raw t 'moreabout.whosunder.content' %>
+          <%= raw t 'moreabout.whosunder.content' %><br/>
           <iframe width="620" height="349" src="http://www.youtube.com/embed/yFkCumtCEeg" allowfullscreen></iframe>
         </div>
           <div class="span1"></div>
