add unknown type for toolbox helpers and add the moving refresh button on homepage

--- a/ZONE-watcher/app/views/home/_search_dino.html.erb
+++ b/ZONE-watcher/app/views/home/_search_dino.html.erb
@@ -16,7 +16,7 @@
             onkeyup="return false;"
             >
           <span id="go-button" class="span1 pull-right hidden" >
-            <button class="btn-success" type="submit" onclick="movingDataFromIndex()"><span class="icon-arrow-right"></span></button>
+            <button id="go-search-button" class="btn-success" type="submit" onclick="movingDataFromIndex()"><span class="icon-arrow-right"></span></button>
           </span>
           </div>
         </div>
