first draft of the tagscloud

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -33,6 +33,7 @@
     <% end %>
 
     <div class="row-fluid">
+      <div id="cloudTags" data-uri="<%= url_for(:action => 'tagsCloud', :controller => 'searches', :id => @search.id) %>">aaa</div>
       <!-- items printing-->
       <div class="newNewsLinkBox" style="display: none;">
         <% lastDate = 0%>
