--- a/ZONE-watcher/app/views/layouts/application.html.erb
+++ b/ZONE-watcher/app/views/layouts/application.html.erb
@@ -36,6 +36,7 @@
   <%= javascript_include_tag "/jwplayer/jwplayer.js" %>
   <%= javascript_include_tag "bootstrapx-clickoverx" %>
   <%= javascript_include_tag "bootstrapx-clickover" %>
+  <%= javascript_include_tag "jQDateRangeSlider-withRuler-min" %>
   <%= javascript_include_tag "jqcloud" %>
   <%= javascript_include_tag("/custom-scrollbar-plugin/js/jquery.mCustomScrollbar.concat.min.js")%>
   <%= favicon_link_tag "favicon.png" %>
