now the tags cloud has better refresh method

--- a/ZONE-watcher/app/views/items/index.html.erb
+++ b/ZONE-watcher/app/views/items/index.html.erb
@@ -40,7 +40,9 @@
     <!-- items printing zone-->
     <div class="row-fluid">
 
-      <div id="cloudZone" style="height:150px"></div>
+      <div id="cloudZone" style="height:150px">
+        <div class="background-dino"></div>
+      </div>
 
       <div class="row-fluid" style="margin-bottom:10px">
           <div class="span10" id="slider" style="padding-top:0px"></div>
